--- a/index.html
+++ b/index.html
@@ -7,14 +7,10 @@
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@ahmedrowaihi" />
-    <meta name="twitter:title" content="Build an SPA Without Any Framework" />
+    <meta name="twitter:title" content="Animated Page transitions with Framer-Motion" />
     <meta
       name="twitter:description"
       content="How to create an SPA with No Framework, only vanilla Javascript"
-    />
-    <meta
-      name="twitter:image"
-      content="https://res.cloudinary.com/practicaldev/image/fetch/s--WGXoQbsM--/c_imagga_scale,f_auto,fl_progressive,h_900,q_auto,w_1600/https://media.licdn.com/mpr/mpr/AAEAAQAAAAAAAAr8AAAAJGUxMTdlYzM4LWZmNmEtNGZiNi05Mjc0LTc1ODQ0MWZmYzU4Nw.png"
     />
     <title>React Router - Page Transitions | Ahmed Rowaihi</title>
     <meta
